<resources>
    <string name="app_name">Fourth</string>
    <string name="todo">TODO</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="brush">刷子</string>
    <string name="eraser">橡皮擦</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="strip_her">脱光她!</string>
    <string name="reset">重置</string>
    <string name="left_skew">左倾</string>
    <string name="right_skew">右倾</string>
    <string name="zoom_in">放大</string>
    <string name="zoom_out">缩小</string>
    <string name="change">变换</string>
    <string name="hue">色调 :</string>
    <string name="saturation">饱和度:</string>
    <string name="lum">亮度 :</string>
    <string name="color">颜色</string>
    <string name="mode">模式</string>
    <string name="stop">停止</string>
    <string name="start">开始</string>
</resources>